[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Fonts/fntBaseFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/Singletons/Hud/FinishScreen/StateMachine/Opened.gd" type="Script" id=3]
[ext_resource path="res://src/Singletons/Hud/FinishScreen/StateMachine/Closed.gd" type="Script" id=4]
[ext_resource path="res://src/Singletons/Hud/FinishScreen/FinishScreen.gd" type="Script" id=5]
[ext_resource path="res://src/Singletons/Hud/FinishScreen/StateMachine/Transition.gd" type="Script" id=6]
[ext_resource path="res://src/Singletons/Hud/Resource/FruitsCount.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Hud/icon_Ps4_circle.png" type="Texture" id=8]
[ext_resource path="res://assets/Hud/icon_Ps4_cross.png" type="Texture" id=9]

[node name="FinishScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishData" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -20.5
margin_bottom = 20.5
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishLabel" type="Label" parent="FinishData"]
margin_right = 640.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Level ## complete"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Statistics" type="HBoxContainer" parent="FinishData"]
margin_top = 24.0
margin_right = 640.0
margin_bottom = 41.0
custom_constants/separation = 32
alignment = 1

[node name="FruitsCount" parent="FinishData/Statistics" instance=ExtResource( 7 )]
margin_left = 228.0
margin_right = 312.0
margin_bottom = 17.0

[node name="LevelTime" type="Label" parent="FinishData/Statistics"]
margin_left = 344.0
margin_top = 1.0
margin_right = 412.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
text = "99:99.99"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="FinishData"]
margin_top = 51.0
margin_right = 640.0
margin_bottom = 67.0
custom_constants/separation = 32
alignment = 1

[node name="ExitInfo" type="HBoxContainer" parent="FinishData/HBoxContainer"]
margin_left = 246.0
margin_right = 303.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="FinishData/HBoxContainer/ExitInfo"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 8 )

[node name="ExitInstruction" type="Label" parent="FinishData/HBoxContainer/ExitInfo"]
margin_left = 20.0
margin_top = 1.0
margin_right = 57.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Exit"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueInfo" type="HBoxContainer" parent="FinishData/HBoxContainer"]
margin_left = 335.0
margin_right = 394.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="FinishData/HBoxContainer/ContinueInfo"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 9 )

[node name="ExitInstruction" type="Label" parent="FinishData/HBoxContainer/ContinueInfo"]
margin_left = 20.0
margin_top = 1.0
margin_right = 59.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Next"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("../../FinishScreen/StateMachine/Closed")

[node name="Opened" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Transition" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Closed" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="TransitionTween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="TransitionTween" to="." method="_on_TransitionTween_tween_all_completed"]
